Fixes negative margin issue in the grid system
Our grid system math was off resulting in too much negative margin
in the grid rows. This adjusts the gutter variable and the math
accordingly.

--- a/base/_grid.scss
+++ b/base/_grid.scss
@@ -10,7 +10,7 @@
 
 .go-column {
   flex: 1 1 auto;
-  padding: 0 ($column-gutter/2) $column-gutter;
+  padding: 0 $column-gutter ($column-gutter*2);
 
   > *:not(.go-container) {
     width: 100%;
